fix: align text registration

--- a/frontend/src/components/formRegistration/styles.scss
+++ b/frontend/src/components/formRegistration/styles.scss
@@ -37,6 +37,10 @@
   &_submit {
     display: flex;
     flex-direction: column;
+    align-items: center;
+    p {
+      text-align: center;
+    }
   }
 }
 
